Se hace demostracion del uso de la carpeta gitignore

--- a/styles/scss/componentes/_navbar.scss
+++ b/styles/scss/componentes/_navbar.scss
@@ -14,3 +14,9 @@
 a:hover {
   text-decoration: underline;
 }
+
+// @media (min-width: 768px) {
+//   .navbar {
+//     max-height: 80px;
+//   }
+// }
