--- a/styles/scss/componentes/_navbar.scss
+++ b/styles/scss/componentes/_navbar.scss
@@ -15,8 +15,8 @@ a:hover {
   text-decoration: underline;
 }
 
-// @media (min-width: 768px) {
+// @media (min-width: 420px) and (max-width: 768px) {
 //   .navbar {
-//     max-height: 80px;
+//     height: 80px;
 //   }
 // }
