reparacion ruta de imagenes

--- a/styles/scss/base/_jumbotron.scss
+++ b/styles/scss/base/_jumbotron.scss
@@ -1,5 +1,5 @@
 .jumbotron {
-  background-image: url(/img/lavapelo.webp);
+  background-image: url(../../../img/lavapelo.webp);
   filter: grayscale(60%);
   background-position: center;
   background-size: cover;
