--- a/styles/scss/componentes/_navbar.scss
+++ b/styles/scss/componentes/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   height: 200px;
-  background-image: url(/img/baner.png);
+  background-image: url(../../../img/baner.png);
   background-size: cover;
   background-position: top;
 }
