--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -82,7 +82,7 @@ p:last-child {
 }
 
 .jumbotron {
-  background-image: url(/img/lavapelo.webp);
+  background-image: url(../../../img/lavapelo.webp);
   filter: grayscale(60%);
   background-position: center;
   background-size: cover;
@@ -101,7 +101,7 @@ p:last-child {
 
 .navbar {
   height: 200px;
-  background-image: url(/img/baner.png);
+  background-image: url(../../../img/baner.png);
   background-size: cover;
   background-position: top;
 }
@@ -117,7 +117,7 @@ a:hover {
 }
 
 .nleft {
-  background-image: url(/img/Jorge\ sin\ fondo.png);
+  background-image: url(../../../img/Jorge\ sin\ fondo.png);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: auto;
