--- a/styles/scss/componentes/_article.scss
+++ b/styles/scss/componentes/_article.scss
@@ -1,5 +1,5 @@
 .nleft {
-  background-image: url(/img/Jorge\ sin\ fondo.png);
+  background-image: url(../../../img/Jorge\ sin\ fondo.png);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: auto;
