--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -82,7 +82,7 @@ p:last-child {
 }
 
 .jumbotron {
-  background-image: url(../../../img/lavapelo.webp);
+  background-image: url(../../img/lavapelo.webp);
   filter: grayscale(60%);
   background-position: center;
   background-size: cover;
@@ -101,7 +101,7 @@ p:last-child {
 
 .navbar {
   height: 200px;
-  background-image: url(../../../img/baner.png);
+  background-image: url(../../img/baner.png);
   background-size: cover;
   background-position: top;
 }
@@ -117,7 +117,7 @@ a:hover {
 }
 
 .nleft {
-  background-image: url(../../../img/Jorge\ sin\ fondo.png);
+  background-image: url(../../img/Jorge\ sin\ fondo.png);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: auto;
@@ -420,7 +420,8 @@ footer a:hover {
   right: 0;
   z-index: 9000;
   position: fixed;
-  box-shadow: 0 0 1em -0.125em rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.02);
+  box-shadow: 0 0 1em -0.125em rgba(10, 10, 10, 0.1),
+    0 0 0 1px rgba(10, 10, 10, 0.02);
   border-bottom: 1px solid #e2e8f0;
   background-color: #f8fafc;
 }
@@ -643,7 +644,7 @@ footer a:hover {
 /**
  * Correct the inability to style buttons in iOS and Safari.
  */
-:where(button, [type=button i], [type=reset i], [type=submit i]) {
+:where(button, [type="button" i], [type="reset" i], [type="submit" i]) {
   -webkit-appearance: button;
 }
 
@@ -674,7 +675,7 @@ footer a:hover {
  * 1. Correct the odd appearance in Chrome, Edge, and Safari.
  * 2. Correct the outline style in Safari.
  */
-:where([type=search i]) {
+:where([type="search" i]) {
   -webkit-appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
 }
@@ -747,7 +748,7 @@ footer a:hover {
 /**
  * Change the cursor on busy elements in all browsers (opinionated).
  */
-:where([aria-busy=true i]) {
+:where([aria-busy="true" i]) {
   cursor: progress;
 }
 
@@ -762,7 +763,7 @@ footer a:hover {
  * Change the cursor on disabled, not-editable, or otherwise
  * inoperable elements in all browsers (opinionated).
  */
-:where([aria-disabled=true i], [disabled]) {
+:where([aria-disabled="true" i], [disabled]) {
   cursor: not-allowed;
 }
 
@@ -770,11 +771,11 @@ footer a:hover {
  * Change the display on visually hidden accessible elements
  * in all browsers (opinionated).
  */
-:where([aria-hidden=false i][hidden]) {
+:where([aria-hidden="false" i][hidden]) {
   display: initial;
 }
 
-:where([aria-hidden=false i][hidden]:not(:focus)) {
+:where([aria-hidden="false" i][hidden]:not(:focus)) {
   clip: rect(0, 0, 0, 0);
   position: absolute;
 }
